--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/forms.cpython-38.pyc
 __pycache__/flaskBlog.cpython-38.pyc
 site.db
 .vscode/settings.json
+__pycache__/models.cpython-38.pyc
