added User authentication

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ __pycache__/flaskBlog.cpython-38.pyc
 site.db
 .vscode/settings.json
 __pycache__/models.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/forms.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/__pycache__/forms.cpython-38.pyc
+flaskBlog/__pycache__/models.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
