--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ flaskBlog/__pycache__/forms.cpython-38.pyc
 flaskBlog/__pycache__/routes.cpython-38.pyc
 flaskBlog/__pycache__/forms.cpython-38.pyc
 flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
