--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ flaskBlog/__pycache__/routes.cpython-38.pyc
 flaskBlog/__pycache__/forms.cpython-38.pyc
 flaskBlog/__pycache__/routes.cpython-38.pyc
 flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/__pycache__/forms.cpython-38.pyc
+flaskBlog/__pycache__/models.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
