--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ flaskBlog/__pycache__/__init__.cpython-38.pyc
 flaskBlog/__pycache__/forms.cpython-38.pyc
 flaskBlog/__pycache__/models.cpython-38.pyc
 flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/__pycache__/config.cpython-38.pyc
+flaskBlog/__pycache__/forms.cpython-38.pyc
+flaskBlog/__pycache__/models.cpython-38.pyc
+flaskBlog/__pycache__/routes.cpython-38.pyc
+flaskBlog/__pycache__/__init__.cpython-38.pyc
+flaskBlog/main/__pycache__/__init__.cpython-38.pyc
+flaskBlog/main/__pycache__/routes.cpython-38.pyc
+flaskBlog/posts/__pycache__/__init__.cpython-38.pyc
+flaskBlog/posts/__pycache__/routes.cpython-38.pyc
+flaskBlog/posts/__pycache__/forms.cpython-38.pyc
+flaskBlog/users/__pycache__/__init__.cpython-38.pyc
+flaskBlog/users/__pycache__/forms.cpython-38.pyc
+flaskBlog/users/__pycache__/routes.cpython-38.pyc
+flaskBlog/users/__pycache__/utils.cpython-38.pyc
